# swagger.json
@@ -5,7 +5,7 @@
     "description": "This is a simple Express API for managing users",
     "version": "1.0.0"
   },
-  "host": "cse341-project1-qm1h.onrender.com",
+  "host": "cse341-project1-qm1h.onrender.com/",
   "basePath": "/",
   "schemes": [
     "https"
@@ -105,6 +105,27 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "ipaddress": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
